--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "pointerEvents",
-  "homepage": "https://grantcuster.github.io/pointerEvents",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "three": "^0.130.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
